syntax = "proto3";
package io.harness;
option java_multiple_files = true;

enum Team {
  OTHER = 0;
  CD = 1;
  CV = 2;
  CI = 3;
  FFM = 4;
}

message NotificationRequest {
  string accountId = 2;
  Team team = 3;
  string id = 4;

  oneof channel {
    Slack slack = 5;
    Email email = 6;
    PagerDuty pagerDuty = 7;
    MSTeam msTeam = 8;
  }

  message Slack {
    repeated string slackWebHookUrls = 7;
    repeated string userGroupIds = 8;
    map<string, string> templateData = 4;
    string templateId = 3;
  }

  message Email {
    repeated string emailIds = 7;
    repeated string userGroupIds = 8;
    map<string, string> templateData = 4;
    string templateId = 3;
  }

  message PagerDuty {
    repeated string pagerDutyIntegrationKeys = 7;
    repeated string userGroupIds = 8;
    map<string, string> templateData = 4;
    string templateId = 3;
  }

  message MSTeam {
    repeated string msTeamKeys = 7;
    repeated string userGroupIds = 8;
    map<string, string> templateData = 4;
    string templateId = 3;
  }
}